--- a/index.html
+++ b/index.html
@@ -8,13 +8,37 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="" id="">
+        <option value="">Select a city</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Tokyo</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles 🇺🇸</h2>
+        <div class="date">February 25th 2023</div>
+        <div class="time">11.38 AM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney 🇦🇺</h2>
+        <div class="date">February 25th 2023</div>
+        <div class="time">11.38 AM</div>
+      </div>
+      <div class="city">
+        <h2>Lisbon 🇵🇹</h2>
+        <div class="date">February 25th 2023</div>
+        <div class="time">11.38 AM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Julia Frejd and is
       <a href="https://github.com/juliafrejd/world-clock" target="_blank"
         >open sourced on GitHub</a
       >
     </footer>
+
     <script src="js/index.js"></script>
   </body>
 </html>
