--- a/index.html
+++ b/index.html
@@ -17,25 +17,48 @@
         <option value="">Tokyo</option>
       </select>
       <div class="city">
-        <h2>Los Angeles 🇺🇸</h2>
-        <div class="date">February 25th 2023</div>
-        <div class="time">11.38 AM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">February 25th 2023</div>
+        </div>
+        <div>
+          <div class="time">11:38 <small>AM</small></div>
+        </div>
       </div>
       <div class="city">
-        <h2>Sydney 🇦🇺</h2>
-        <div class="date">February 25th 2023</div>
-        <div class="time">11.38 AM</div>
+        <div>
+          <h2>Kiev 🇺🇦</h2>
+          <div class="date">February 25th 2023</div>
+        </div>
+        <div>
+          <div class="time">11:38 <small>AM</small></div>
+        </div>
       </div>
       <div class="city">
-        <h2>Lisbon 🇵🇹</h2>
-        <div class="date">February 25th 2023</div>
-        <div class="time">11.38 AM</div>
+        <div>
+          <h2>Sydney 🇦🇺</h2>
+          <div class="date">February 25th 2023</div>
+        </div>
+        <div>
+          <div class="time">11:38 <small>AM</small></div>
+        </div>
+      </div>
+      <div class="city">
+        <div>
+          <h2>London 🇬🇧</h2>
+          <div class="date">February 25th 2023</div>
+        </div>
+        <div>
+          <div class="time">11:38 <small>AM</small></div>
+        </div>
       </div>
     </div>
     <footer>
-      This project was coded by Julia Frejd and is
-      <a href="https://github.com/juliafrejd/world-clock" target="_blank"
-        >open sourced on GitHub</a
+      <small
+        >This project was coded by Julia Frejd and is
+        <a href="https://github.com/juliafrejd/world-clock" target="_blank"
+          >open sourced on GitHub</a
+        ></small
       >
     </footer>
 
