--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.41/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
   </head>
   <body>
@@ -16,40 +18,40 @@
         <option value="">New York</option>
         <option value="">Tokyo</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">February 25th 2023</div>
+          <div class="date"></div>
         </div>
         <div>
-          <div class="time">11:38 <small>AM</small></div>
+          <div class="time"></div>
         </div>
       </div>
-      <div class="city">
+      <div class="city" id="kiev">
         <div>
           <h2>Kiev 🇺🇦</h2>
-          <div class="date">February 25th 2023</div>
+          <div class="date"></div>
         </div>
         <div>
-          <div class="time">11:38 <small>AM</small></div>
+          <div class="time"></div>
         </div>
       </div>
-      <div class="city">
+      <div class="city" id="sydney">
         <div>
           <h2>Sydney 🇦🇺</h2>
-          <div class="date">February 25th 2023</div>
+          <div class="date"></div>
         </div>
         <div>
-          <div class="time">11:38 <small>AM</small></div>
+          <div class="time"></div>
         </div>
       </div>
-      <div class="city">
+      <div class="city" id="london">
         <div>
           <h2>London 🇬🇧</h2>
-          <div class="date">February 25th 2023</div>
+          <div class="date"></div>
         </div>
         <div>
-          <div class="time">11:38 <small>AM</small></div>
+          <div class="time"></div>
         </div>
       </div>
     </div>
