Updating all files. Adding live seconds for select elements too

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.41/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
@@ -22,7 +28,7 @@
       <div id="cities">
         <div class="city" id="los-angeles">
           <div>
-            <h2>Los Angeles 🇺🇸</h2>
+            <h2>Los Angeles</h2>
             <div class="date"></div>
           </div>
           <div>
@@ -31,7 +37,7 @@
         </div>
         <div class="city" id="kiev">
           <div>
-            <h2>Kiev 🇺🇦</h2>
+            <h2>Kiev</h2>
             <div class="date"></div>
           </div>
           <div>
@@ -40,7 +46,7 @@
         </div>
         <div class="city" id="sydney">
           <div>
-            <h2>Sydney 🇦🇺</h2>
+            <h2>Sydney</h2>
             <div class="date"></div>
           </div>
           <div>
